Added create exchange button on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,7 @@
         </header>
 
         <section>
+            <button>Create New Exchange</button>
             <h2>Recent Exchanges</h2>
             <ul>
                 <li>Jay-Z</li>
